--- a/content/blog/post-2.mdx
+++ b/content/blog/post-2.mdx
@@ -1,10 +1,12 @@
 ---
 title: Hello World
 description: This is our first blog post. Really cool
-date: 2024-03-06
+date: 2024-03-05
 tags: ["code", "blog"]
 published: true
 ---
+
+<Callout type="warning">Hello I am a callout</Callout>
 
 # Hello World
 
