--- a/content/blog/guide-to-using-images-in-nextjs.mdx
+++ b/content/blog/guide-to-using-images-in-nextjs.mdx
@@ -1,10 +1,9 @@
 ---
 title: Images in Next.js
+description: "In this article we introduce adding images in the tailwind starter blog and the benefits and limitations of the next/image component."
 date: "2020-11-11"
 tags: ["next js", "guide"]
-draft: false
-summary: "In this article we introduce adding images in the tailwind starter blog and the benefits and limitations of the next/image component."
-authors: ["sparrowhawk"]
+published: true
 ---
 
 # Introduction
