--- a/content/blog/test.mdx
+++ b/content/blog/test.mdx
@@ -2,10 +2,8 @@
 title: Your Post Title
 date: 2024-06-02
 description: Description of your post
+tags: ["code", "blog"]
 published: true
-tags:
-  - Tag1
-  - Tag2
 ---
 
 # Your Post Title
