--- a/content/blog/guide-to-using-images-in-nextjs.mdx
+++ b/content/blog/guide-to-using-images-in-nextjs.mdx
@@ -51,7 +51,7 @@ Alternatively, since we are using mdx, we can just use the image component direc
 
 _Note_: If you try to save the image, it is in webp format, if your browser supports it!
 
-![ocean](/static/ocean.jpg)
+<Image alt="ocean" src="/static/ocean.jpg" width={1920} height={1280} />
 
 Photo by [YUCAR FotoGrafik](https://unsplash.com/@yucar?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText)
 on [Unsplash](https://unsplash.com/s/photos/sea?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText)
