--- a/content/blog/guide-to-using-images-in-nextjs.mdx
+++ b/content/blog/guide-to-using-images-in-nextjs.mdx
@@ -46,12 +46,12 @@ Assuming we have a file called `ocean.jpg` in `static/images/ocean.jpg`, the fol
 Alternatively, since we are using mdx, we can just use the image component directly! Note, that you would have to provide a fixed width and height. The `img` tag method parses the dimension automatically.
 
 ```js
-<Image alt="ocean" src="/static/images/ocean.jpg" width={256} height={128} />
+<Image alt="ocean" src="/images/ocean.jpg" width={256} height={128} />
 ```
 
 _Note_: If you try to save the image, it is in webp format, if your browser supports it!
 
-<Image alt="ocean" src="/static/ocean.jpg" width={1920} height={1280} />
+![ocean](/images/ocean.jpg)
 
 Photo by [YUCAR FotoGrafik](https://unsplash.com/@yucar?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText)
 on [Unsplash](https://unsplash.com/s/photos/sea?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText)
