feat: adding some features

--- a/content/blog/code-block.mdx
+++ b/content/blog/code-block.mdx
@@ -11,6 +11,8 @@ published: true
 
 ## Editor-Grade Highlighting
 
+👋 Hi, I love emojis a lot 🤓
+
 <span className="text-zinc-400/80 mix-blend-plus-lighter">
   Enjoy the accuracy and granularity of VS Code's syntax highlighting engine and
   the popularity of its themes ecosystem — use any VS Code theme you want!
