--- a/content/blog/post-2.mdx
+++ b/content/blog/post-2.mdx
@@ -6,10 +6,18 @@ tags: ["code", "blog"]
 published: true
 ---
 
-<Callout type="warning">Hello I am a callout</Callout>
+<Callout>Hello I am a callout</Callout>
 
 # Hello World
 
+<Button>test</Button>
+
 Welcome to my blog `inline code`
+
+<Tabs items={["pnpm", "npm", "yarn"]}>
+  <div>**pnpm**: Fast, disk space efficient package manager.</div>
+  <div>**npm**: is a package manager for the JavaScript language.</div>
+  <div>**Yarn**: is a software packaging system.</div>
+</Tabs>
 
 ### Header 3
