feat: adding design improvements

--- a/content/blog/guide-to-using-images-in-nextjs.mdx
+++ b/content/blog/guide-to-using-images-in-nextjs.mdx
@@ -39,7 +39,7 @@ For a markdown file, the default image tag can be used and the default `img` tag
 
 Assuming we have a file called `ocean.jpg` in `static/images/ocean.jpg`, the following line of code would generate the optimized image.
 
-```
+```mdx
 ![ocean](/static/ocean.jpg)
 ```
 
