feat: change style & improve image plugin

--- a/content/blog/code-block.mdx
+++ b/content/blog/code-block.mdx
@@ -68,7 +68,7 @@ function MyComponent() {
          [0;2mpress [0;1mh[0;2m to show help, press [0;1mq[0;2m to quit
 ```
 
-Inline ANSI: `> Local: http://localhost:3000/`
+Inline ANSI: > ` Local: http://localhost:3000/`
 
 ---
 
