--- a/content/blog/code-block.mdx
+++ b/content/blog/code-block.mdx
@@ -59,16 +59,17 @@ function MyComponent() {
 ## ANSI Highlighting
 
 ```ansi
-[0m [0;32m✓[0m [0;2msrc/[0mindex[0;2m.test.ts (1)[0m
-  [0;2m Test Files [0m [0;1;32m1 passed[0;98m (1)[0m
-  [0;2m      Tests [0m [0;1;32m1 passed[0;98m (1)[0m
-  [0;2m   Start at [0m 23:32:41
-  [0;2m   Duration [0m 11ms
-  [42;1;39;0m PASS [0;32m Waiting for file changes...[0m
-         [0;2mpress [0;1mh[0;2m to show help, press [0;1mq[0;2m to quit
+[0;36m  vite v5.0.0[0;32m dev server running at:[0m
+
+  > Local: [0;36mhttp://localhost:[0;36;1m3000[0;36m/[0m
+  > Network: [0;2muse `--host` to expose[0m
+
+  [0;36mready in 125ms.[0m
+
+[0;2m8:38:02 PM[0m [0;36;1m[vite][0m [0;32mhmr update [0;2m/src/App.jsx
 ```
 
-Inline ANSI: > ` Local: http://localhost:3000/`
+Inline ANSI: > `[0;36mhttp://localhost:[0;36;1m3000[0;36m/[0m{:ansi}`
 
 ---
 
