--- a/content/blog/post-2.mdx
+++ b/content/blog/post-2.mdx
@@ -15,9 +15,11 @@ published: true
 Welcome to my blog `inline code`
 
 <Tabs items={["pnpm", "npm", "yarn"]}>
-  <div>**pnpm**: Fast, disk space efficient package manager.</div>
-  <div>**npm**: is a package manager for the JavaScript language.</div>
-  <div>**Yarn**: is a software packaging system.</div>
+  <Tabs.Tab>**pnpm**: Fast, disk space efficient package manager.</Tabs.Tab>
+  <Tabs.Tab>
+    **npm**: is a package manager for the JavaScript language.
+  </Tabs.Tab>
+  <Tabs.Tab>**Yarn**: is a software packaging system.</Tabs.Tab>
 </Tabs>
 
 ### Header 3
