feat: adding JsDoc & change styles

--- a/content/blog/mdxtest.mdx
+++ b/content/blog/mdxtest.mdx
@@ -78,7 +78,7 @@ GitHub, that adds support for strikethrough, task lists, tables, and more.
 
 Visit https://nextjs.org.
 
-```md
+```mdx
 Visit https://nextjs.org.
 ```
 
