--- a/content/blog/code-block.mdx
+++ b/content/blog/code-block.mdx
@@ -66,7 +66,7 @@ function MyComponent() {
 
   [0;36mready in 125ms.[0m
 
-[0;2m8:38:02 PM[0m [0;36;1m[vite][0m [0;32mhmr update [0;2m/src/App.jsx
+[0;36m  [0;2m8:38:02 PM[0m [0;36;1m[vite][0m [0;32mhmr update [0;2m/src/App.jsx
 ```
 
 Inline ANSI: > `[0;36mhttp://localhost:[0;36;1m3000[0;36m/[0m{:ansi}`
