--- a/content/posts/code-block.mdx
+++ b/content/posts/code-block.mdx
@@ -88,9 +88,11 @@ function isEven(number) {
   } else if (number === 5) {
     return false;
   } else if (number === 6) {
-    return true;
+    // [!code --]
+    return true; // [!code --]
   } else if (number === 7) {
-    return false;
+    // [!code ++]
+    return false; // [!code ++]
   } else if (number === 8) {
     return true;
   } else if (number === 9) {
