--- a/content/posts/mdxtest.mdx
+++ b/content/posts/mdxtest.mdx
@@ -102,6 +102,27 @@ Indent
 
 Check out the Syntax Highlighting section for more information:
 
+```mermaid
+graph TD;
+subgraph AA [Consumers]
+A[Mobile app];
+B[Web app];
+C[Node.js client];
+end
+subgraph BB [Services]
+E[REST API];
+F[GraphQL API];
+G[SOAP API];
+end
+Z[GraphQL API];
+A --> Z;
+B --> Z;
+C --> Z;
+Z --> E;
+Z --> F;
+Z --> G;
+```
+
 @embed:https://www.youtube.com/watch?v=zZ6vybT1HQs&t=12438s
 
 [^1]: This is the first footnote.
