--- a/content/posts/code-block.mdx
+++ b/content/posts/code-block.mdx
@@ -87,11 +87,9 @@ function isEven(number) {
     return true;
   } else if (number === 5) {
     return false;
-  } else if (number === 6) {
-    // [!code --]
+  } else if (number === 6) { // [!code --]
     return true; // [!code --]
-  } else if (number === 7) {
-    // [!code ++]
+  } else if (number === 7) { // [!code ++]
     return false; // [!code ++]
   } else if (number === 8) {
     return true;
