feat: adding post features

--- a/content/posts/guide-to-using-images-in-nextjs.mdx
+++ b/content/posts/guide-to-using-images-in-nextjs.mdx
@@ -3,6 +3,7 @@ title: Images in Next.js
 description: "In this article we introduce adding images in the tailwind starter blog and the benefits and limitations of the next/image component."
 date: "2020-11-11"
 tags: ["next js", "guide"]
+image: "./assets/1800x1000.svg"
 published: true
 ---
 
