--- a/content/posts/post-1.mdx
+++ b/content/posts/post-1.mdx
@@ -3,6 +3,7 @@ title: Hello World
 description: This is our first blog post. Really cool
 date: 2024-03-06
 tags: ["code", "blog"]
+image: "./assets/1800x1000.svg"
 published: true
 ---
 
