--- a/content/posts/test.mdx
+++ b/content/posts/test.mdx
@@ -3,6 +3,7 @@ title: Your Post Title
 date: 2024-06-02
 description: Description of your post
 tags: ["code", "blog"]
+image: "./assets/1800x1000.svg"
 published: true
 ---
 
