--- a/content/posts/post-2.mdx
+++ b/content/posts/post-2.mdx
@@ -3,6 +3,7 @@ title: Hello World
 description: This is our first blog post. Really cool
 date: 2024-03-05
 tags: ["code", "blog"]
+image: "./assets/1800x1000.svg"
 published: true
 ---
 
@@ -17,7 +18,7 @@ Welcome to my blog `inline code`
 <Tabs items={["pnpm", "npm", "yarn"]}>
   <Tabs.Tab>**pnpm**: Fast, disk space efficient package manager.</Tabs.Tab>
   <Tabs.Tab>
-    **npm**: is a package manager for the JavaScript language.
+    <>**npm**: is a package manager for the JavaScript language.</>
   </Tabs.Tab>
   <Tabs.Tab>**Yarn**: is a software packaging system.</Tabs.Tab>
 </Tabs>
