feat: adding projects and iframes

--- a/content/posts/mdxtest.mdx
+++ b/content/posts/mdxtest.mdx
@@ -13,7 +13,7 @@ With Nextra, all your `.mdx` files under the pages directory will be rendered
 with [MDX](https://mdxjs.com/about), it's an advanced Markdown format with React
 component support.
 
-For example, you can use import and use React components inside your Markdown
+==For example==, you can use import and use React components inside your Markdown
 files like this:
 
 ```jsx filename="Markdown"
@@ -103,6 +103,6 @@ Indent
 
 Check out the Syntax Highlighting section for more information:
 
-@embed:https://www.youtube.com/watch?v=zZ6vybT1HQs&t=12438s
+https://www.youtube.com/watch?v=zZ6vybT1HQs&t=12438s
 
 [^1]: This is the first footnote.
