--- a/content/posts/post-2.mdx
+++ b/content/posts/post-2.mdx
@@ -7,7 +7,7 @@ image: "./assets/1800x1000.svg"
 published: true
 ---
 
-<Callout>Hello I am a callout</Callout>
+<Callout type="error">Hello I am a callout</Callout>
 
 # Hello World
 
@@ -24,3 +24,7 @@ Welcome to my blog `inline code`
 </Tabs>
 
 ### Header 3
+
+https://codesandbox.io/s/css-variables-vs-themeprovider-df90h
+
+https://www.youtube.com/watch?v=dQw4w9WgXcQ
