feat: complete projects page & change style

--- a/content/projects/1.mdx
+++ b/content/projects/1.mdx
@@ -1,7 +1,7 @@
 ---
 title: Sonicrypt
 description: Sonicrypt is the world's first blockchain transaction sonification device to provide immediate auditory and visual confirmation of successful payments, thereby instilling confidence and trust in digital transactions.
-tags: ["Solana", "ESP-32", "C++", "Next.js", "React Native"]
+tags: ["Solana", "ESP-32", "C++", "Next.js"]
 date: 2024-04-20
 image: "./assets/sonicrypt/sonicrypt.png"
 ---
@@ -37,7 +37,6 @@ image: "./assets/sonicrypt/sonicrypt.png"
 
 The Sonicrypt Device is the world's first device that provides audio and visual confirmation of successful crypto payments. It aims to enhance the experience for both buyers and sellers involved in these transactions.
 
-
 #### Features
 
 - Audio confirmation of successful payments
@@ -49,7 +48,6 @@ The Sonicrypt Device is the world's first device that provides audio and visual 
 - Off-chain transactions (Sonicrypt Pro)
 
 #### Sonicrypt is powered by ESP32 microcontroller
-
 
 #### User Workflow
 
@@ -91,8 +89,7 @@ The Sonicrypt App is a mobile application that allows users to connect and confi
 #### Built in emulator
 
 <br />
-<div className="flex flex-wrap justify-between w-full">
-</div>
+<div className="flex flex-wrap justify-between w-full"></div>
 
 ### Tech stack
 
@@ -109,14 +106,6 @@ The Sonicrypt App is a mobile application that allows users to connect and confi
   - **Style:** CSS, Tailwindcss
   - **Animation:** Framer motion
   - **Libs/SDKs:** Solana web3js
-
-<div className="flex justify-center items-center">
-  <Image
-    width="70%"
-    src="https://github.com/rudrodip/rudrodip/assets/77154365/3b034a80-8fb4-4c1b-9671-bbd13850e3c8"
-    alt="gg"
-  />
-</div>
 
 ## Open-Source and No Hidden Costs
 
