--- a/content/posts/mdxtest.mdx
+++ b/content/posts/mdxtest.mdx
@@ -3,7 +3,7 @@ title: Markdown
 description: This is our first blog post. Really cool
 date: 2024-03-06
 tags: ["code", "blog"]
-image: "./assets/1800x1000.svg"
+image: "./assets/880x500.svg"
 published: true
 ---
 
@@ -103,6 +103,6 @@ Indent
 
 Check out the Syntax Highlighting section for more information:
 
-https://www.youtube.com/watch?v=zZ6vybT1HQs&t=12438s
+<VideoPlayer url="https://www.youtube.com/watch?v=zZ6vybT1HQs&t=12438s"/>
 
 [^1]: This is the first footnote.
