--- a/content/projects/sonicrypt.mdx
+++ b/content/projects/sonicrypt.mdx
@@ -37,7 +37,6 @@ image: "./assets/sonicrypt/sonicrypt.png"
 
 The Sonicrypt Device is the world's first device that provides audio and visual confirmation of successful crypto payments. It aims to enhance the experience for both buyers and sellers involved in these transactions.
 
-
 #### Features
 
 - Audio confirmation of successful payments
@@ -49,7 +48,6 @@ The Sonicrypt Device is the world's first device that provides audio and visual 
 - Off-chain transactions (Sonicrypt Pro)
 
 #### Sonicrypt is powered by ESP32 microcontroller
-
 
 #### User Workflow
 
@@ -91,8 +89,7 @@ The Sonicrypt App is a mobile application that allows users to connect and confi
 #### Built in emulator
 
 <br />
-<div className="flex flex-wrap justify-between w-full">
-</div>
+<div className="flex flex-wrap justify-between w-full"></div>
 
 ### Tech stack
 
